# polycopy

./: Cargo.toml  LICENSE  README.md  config.example.toml  implementation_outline.md  quick_reference.md
src/: config.rs  errors.rs  main.rs  models.rs
src/backtest/: engine.rs  metrics.rs  mod.rs  simulator.rs  slippage.rs
src/execution/: clob_client.rs  mod.rs  order_executor.rs  position_sizer.rs  signer.rs
src/monitoring/: detector.rs  mod.rs  tracker.rs
src/storage/: mod.rs  trade_log.rs
