[package]
name = "polymarket-copy-trader"
version = "0.1.0"
edition = "2021"
authors = ["Polymarket Copy Trader Contributors"]
description = "A self-hosted Rust-based copy-trading bot for Polymarket"
license = "MIT"

[dependencies]
# Web3 / Blockchain
ethers = { version = "2.0", features = ["ws", "rustls"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Numeric precision
rust_decimal = { version = "1.35", features = ["serde"] }

# Cryptography
sha3 = "0.10"
hmac = "0.12"
hex = "0.4"

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# Database (optional)
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "bigdecimal"], optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# CLI / Config
clap = { version = "4.4", features = ["derive"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"
rust_decimal_macros = "1.35"

[features]
default = []
database = ["sqlx"]

[[bin]]
name = "polymarket-copy-trader"
path = "src/main.rs"
